RESOLVED FIXED90417
Fix new -Wunused-private-field violations
https://bugs.webkit.org/show_bug.cgi?id=90417
Summary Fix new -Wunused-private-field violations
Nico Weber
Reported 2012-07-02 17:57:58 PDT
Fix new -Wunused-private-field violations
Attachments
Patch (3.46 KB, patch)
2012-07-02 18:00 PDT, Nico Weber
no flags
Patch (3.50 KB, patch)
2012-07-02 18:01 PDT, Nico Weber
no flags
Nico Weber
Comment 1 2012-07-02 18:00:35 PDT
Nico Weber
Comment 2 2012-07-02 18:01:22 PDT
WebKit Review Bot
Comment 3 2012-07-02 19:04:18 PDT
Comment on attachment 150510 [details] Patch Clearing flags on attachment: 150510 Committed r121720: <http://trac.webkit.org/changeset/121720>
WebKit Review Bot
Comment 4 2012-07-02 19:04:30 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.