Fix new -Wunused-private-field violations https://bugs.webkit.org/show_bug.cgi?id=90417

Reviewed by Ryosuke Niwa.

No intended behavior change.

* inspector/InspectorFileSystemAgent.cpp:
(WebCore):
* platform/graphics/chromium/cc/CCPrioritizedTextureManager.cpp:
(WebCore::CCPrioritizedTextureManager::CCPrioritizedTextureManager):
* platform/graphics/chromium/cc/CCPrioritizedTextureManager.h:
(CCPrioritizedTextureManager):


Canonical link: https://commits.webkit.org/108280@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@121720 268f45cc-cd09-0410-ab3c-d52691b4dbfc